--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r esm  app.js"
+    "dev": "nodemon -r esm  app.js",
+    "start": "esm app.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
