--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -r esm  app.js",
-    "start": "esm app.js"
+    "start": "node -r esm app.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
